--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.24",
+    "@ai-sdk/react": "^2.0.41",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/slot": "^1.2.0",
+    "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.19",
@@ -33,7 +36,8 @@
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
