--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.24",
+    "@ai-sdk/openai": "^2.0.28",
     "@ai-sdk/react": "^2.0.41",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/slot": "^1.2.0",
-    "ai": "^3.4.33",
+    "ai": "^5.0.41",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.19",
     "expo-linking": "~7.1.7",
+    "expo-audio": "~0.4.9",
+    "expo-file-system": "~18.1.11",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
