--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.28",
     "@ai-sdk/react": "^2.0.41",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/avatar": "^1.2.0",
+    "@rn-primitives/label": "^1.2.0",
+    "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
+    "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@supabase/supabase-js": "^2.45.0",
     "ai": "^5.0.41",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.19",
-    "expo-linking": "~7.1.7",
     "expo-audio": "~0.4.9",
     "expo-file-system": "~18.1.11",
+    "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -31,10 +37,12 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.14",
